:icons: font

= Gentics Mesh Changelog

[[vNextMajorRelease]]
== Next Major Release

icon:plus[] Core: The OrientDB graph database will be updated to version 3.0

[[v0.16.1]]
== 0.16.1 (TBD)

icon:check[] Elasticsearch: Fixed handling of `search.url` settings which contained https URLs.

icon:check[] Core: Fixed deletion of mesh.token cookie on logout.

[[v0.16.0]]
== 0.16.0 (07.02.2018)

CAUTION: Search: The contents of HTML and HTML list fields will now automatically be stripped of markup prior of indexing.

CAUTION: The `mesh.yml` search section has been updated. The `search.url` property replaces the `search.hosts` property.

[source,json]
----
search:
  url: "http://localhost:9200"
  timeout: 8000
  startEmbedded: false
----

icon:plus[] GraphQL: The underlying graphql-java library was updated to version 7.0.

icon:check[] REST: An error which prevented the `/api/v1` info endpoint from returning version information has been fixed.

icon:plus[] OrientDB: The included OrientDB Studio has been updated to version 2.2.32.

icon:plus[] Config: It is now possible to configure the JVM arguments of the embedded Elasticsearch server via the `search.embeddedArguments` property.

icon:plus[] GraphQL: Schema fields can now be queried. Currently supported are `name`, `label`, `required` and `type`.

[[v0.15.0]]
== 0.15.0 (31.01.2018)

CAUTION: The embedded Elasticsearch was removed and replaced by a connector to a dedicated Elasticsearch server. It is highly recommended to verify existing queries due to breaking changes between Elasticsearch version 2.4 and 6.1.
Please also check the Elasticsearch changelog: link:https://www.elastic.co/guide/en/elasticsearch/reference/current/release-notes-6.1.0.html[Elasticsearch Changelog]

CAUTION: Configuration: The `mesh.yml` format has been updated. Please remove the `search` section or replace it with the following settings.

[source,json]
----
search:
  hosts:
  - hostname: "localhost"
    port: 9200
    protocol: "http"